# Qt-Dynamic-Lib-Plugin_Sample

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
dlibs/: CMakeLists.txt  LibInterface.h  PluginInterface.h
dlibs/dlib1/: CMakeLists.txt  plugin1.cpp  plugin1.h  test-plugin.cpp
dlibs/dlib2/: CMakeLists.txt  plugin2.cpp  test-plugin.cpp
dlibs/dlib3/: CMakeLists.txt  plugin3.cpp  test-plugin.cpp
